--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,3 +2,5 @@ rootProject.name = 'VideoChat'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
+include ':react-native-image-tool'
+project(':react-native-image-tool').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-tool/android')
