--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "react": "18.2.0",
     "react-native": "0.73.7",
     "react-native-agora": "^4.3.0-build.1",
-    "react-native-image-tool": "github:AgoraIO-Extensions/react-native-image-tools",
     "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-vision-camera": "^4.0.1"
+    "react-native-vision-camera": "^4.0.1",
+    "react-native-worklets-core": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
