--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-vision-camera": "^4.0.1",
-    "react-native-worklets-core": "^1.3.0"
+    "react-native-worklets-core": "^1.3.0",
+    "vision-camera-resize-plugin": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
