--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-kit-react-native": "^6.0.2",
     "react": "18.2.0",
     "react-native": "0.73.7",
     "react-native-agora": "^4.3.0-build.1",
+    "react-native-audio-record": "^0.2.2",
+    "react-native-audio-recorder-player": "^3.6.7",
+    "react-native-fs": "^2.20.0",
     "react-native-permissions": "^4.1.5",
+    "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-vision-camera": "^4.0.1",
     "react-native-worklets-core": "^1.3.0",
@@ -31,6 +38,7 @@
     "@react-native/eslint-config": "0.74.81",
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
+    "@types/ffmpeg": "^1.0.7",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
