--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "ffmpeg-kit-react-native": "^6.0.2",
     "react": "18.2.0",
     "react-native": "0.73.7",
-    "react-native-agora": "^4.3.0-build.1",
+    "react-native-agora": "^4.3.1",
+    "react-native-fs": "^2.20.0",
     "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
